--- a/List, Links and Images/1d.html
+++ b/List, Links and Images/1d.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <center><h1>Image Gallery</h1></center>
+    <center><h1>Thumbnail Image Gallery</h1></center>
     <div class="gallery">
       <a href="../images/tiger.jpg" target="_blank"
         ><img src="../images/tigerThumb.png" alt="img1"
